--- a/views/pages/articles.hbs
+++ b/views/pages/articles.hbs
@@ -5,5 +5,8 @@
         <div>
             {{article.content}}
         </div>
+        <div>
+            <a href="/articles/{{article.id}}">read more...</a>
+        </div>
     </section>
 {{/each}}
